# captive_portal_esp32

./: .clinerules  README.md  sdkconfig  sdkconfig.old
components/app_local_server/: CMakeLists.txt  app_local_server.c
components/app_local_server/include/: app_local_server.h
components/app_local_server/webpage/: app.css  app.js  index.html  rfid.css  rfid.html  rfid.js
components/app_time_sync/: CMakeLists.txt  app_time_sync.c
components/app_time_sync/include/: app_time_sync.h
components/app_wifi/: CMakeLists.txt  app_wifi.c
components/app_wifi/include/: app_wifi.h
components/nvs_storage/: custom_partition.c  nvs_storage.c
components/nvs_storage/include/: custom_partition.h  nvs_storage.h
components/rfid_manager/: CMakeLists.txt  rfid_manager.c
components/rfid_manager/include/: rfid_manager.h
components/rfid_manager/test/: CMakeLists.txt  test_rfid_manager.c
components/spiffs_storage/: CMakeLists.txt  spiffs_storage.c
components/spiffs_storage/include/: spiffs_storage.h
components/spiffs_storage/test/: CMakeLists.txt  test_spiffs_storage.c
components/test/: CMakeLists.txt  test_rfid_manager.c  test_spiffs_storage.c
components/test/include/: test_rfid_manager.h  test_spiffs_storage.h
main/: CMakeLists.txt  app_station.c  main.c  time_sync.c
main/include/: app_station.h  time_sync.h
test/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
test/main/: CMakeLists.txt  Kconfig.projbuild  unit_test.c
